css fixes spcing title on mobile

--- a/style.css
+++ b/style.css
@@ -414,8 +414,8 @@ a{
         /*height: 100vh;*/
         display: flex;
         flex-direction: column;
-        padding: 5em 1.5em 1.5em 1.5em;
-        gap: 1.5em;
+        padding: 4em 1.5em 1.5em 1.5em;
+        gap: 1.2em;
         width: 100%;
         font-family: "Open Sans", sans-serif;
     }
